* ---11/10/11---
* - Correct the getvar.c code to work correctly. Add columns to the tree view.
* - Add app receive handling. Set index column invisible.
* ---12/10/11---
* - Some corrections : receive dialog is transcient. Receive dialog is not destroyed when closed just hided. New refresh button to refresh var/app list.
* - Use a separate thread to receive files.
* ---14/10/11---
* - Add a feature to list ti82 and ti85 entries. User must prepare manually the link. Can't save a ti82 or ti85 entry (when selected in the rcvdialog). 
* - Lot of bug, code is really ugly. No error handling. The prepare_for_link_receive is not working. etc...
* ---11/11/11---
* - Benjamin add a totally new prefs dialog. Some unused function (print lcd in terminal by example) are deleted.
* ---12/11/11---
* - Working on ns silent get var.
* ---14/11/11--- 
* - New files : emucore.c and emucore.h .
* - Benjamin adds a totally new core task manager in the gui. Begin to convert the send files function to use it.
* - Use this task manager for macro. There's a little priority problem when a macro load a file. Load a file then run a macro at startup works fine.
* ---15/11/11--- 
* - Receive non silent vars : Benjamin get it working!
* - Remove unused getvar.c file.
* ---16/11/11---
* - Allow multiple selection and multiple receive file. Need to fix a segfault (tomorow... xD).
* ---17/11/11---
* - Repare the file loading inside a macro (it was broken by new task manager).
* - Delete a lot of unused functions/printf.
* - Remove debuginfo.h file.
* ---22/11/11---
* - Benjamin finished the last things left to do on receive dialog. Nice!
* ---25/11/11---
* - New command line parser. Now tilem2 uses g_option from the glib instead of getopt. Easy handling of long options. Do not need to take care about correct parsing. A lot of new options are provided but not implemented !
* - Delete args.c (old _but working well _ cmd line parser using getopt) and TilemCmdlineArgs structure from gui.h.
*/
